@@ -4,7 +4,7 @@
       "Fayland Lam <fayland@gmail.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.17, Dist::Zilla version 6.010, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Milla version v1.0.18, Dist::Zilla version 6.012, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "perl_5"
    ],
@@ -31,7 +31,7 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Milla" : "v1.0.17",
+            "Dist::Milla" : "v1.0.18",
             "Test::Pod" : "1.41"
          }
       },
@@ -61,7 +61,8 @@
          "web" : "https://github.com/fayland/perl-WebService-AntiCaptcha"
       }
    },
-   "version" : "0.01",
+   "version" : "0.02",
+   "x_generated_by_perl" : "v5.25.11",
    "x_serialization_backend" : "Cpanel::JSON::XS version 3.023",
    "x_static_install" : 1
 }
