@@ -65,6 +65,32 @@ with proxy
         "userAgent" => "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Safari/537.36"
     }) or die $wac->errstr;
 
+## FunCaptchaTaskProxyless
+
+[https://anticaptcha.atlassian.net/wiki/spaces/API/pages/325877766/FunCaptchaTaskProxyless+-+funcaptcha+without+proxy](https://anticaptcha.atlassian.net/wiki/spaces/API/pages/325877766/FunCaptchaTaskProxyless+-+funcaptcha+without+proxy)
+
+    my $res = $wac->createTask({
+        type => 'FunCaptchaTaskProxyless',
+        websiteURL => 'https://client-demo.arkoselabs.com/solo-animals',
+        websitePublicKey => $public_key
+    });
+
+## FunCaptchaTask
+
+[https://anticaptcha.atlassian.net/wiki/spaces/API/pages/65634347/FunCaptchaTask+-+rotating+captcha+funcaptcha.com](https://anticaptcha.atlassian.net/wiki/spaces/API/pages/65634347/FunCaptchaTask+-+rotating+captcha+funcaptcha.com)
+
+    my $res = $wac->createTask({
+        type => 'FunCaptchaTask',
+        websiteURL => 'https://client-demo.arkoselabs.com/solo-animals',
+        websitePublicKey => $public_key,
+        "proxyType" => "http",
+        "proxyAddress" => "8.8.8.8",
+        "proxyPort" => 8080,
+        "proxyLogin" => "proxyLoginHere",
+        "proxyPassword" => "proxyPasswordHere",
+        "userAgent" => "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Safari/537.36"
+    });
+
 ## getTaskResult
 
 [https://anticaptcha.atlassian.net/wiki/spaces/API/pages/5079103/getTaskResult+request+task+result](https://anticaptcha.atlassian.net/wiki/spaces/API/pages/5079103/getTaskResult+request+task+result)
