@@ -1,6 +1,7 @@
 Revision history for WebService-AntiCaptcha
 
 {{$NEXT}}
+        - add example for FunCaptchaTaskProxyless/FunCaptchaTask
 
 0.01  2017-08-29 16:58:46 CST
         - Initial release
